; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/image-source/extr_image-source.c_image_source_properties.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/image-source/extr_image-source.c_image_source_properties.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.image_source = type { i64* }
%struct.dstr = type { i8*, i32 }

@.str = private unnamed_addr constant [2 x i8] c"\\\00", align 1
@.str.1 = private unnamed_addr constant [2 x i8] c"/\00", align 1
@.str.2 = private unnamed_addr constant [5 x i8] c"file\00", align 1
@.str.3 = private unnamed_addr constant [5 x i8] c"File\00", align 1
@OBS_PATH_FILE = common dso_local global i32 0, align 4
@image_filter = common dso_local global i32 0, align 4
@.str.4 = private unnamed_addr constant [7 x i8] c"unload\00", align 1
@.str.5 = private unnamed_addr constant [21 x i8] c"UnloadWhenNotShowing\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i8*)* @image_source_properties to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @image_source_properties(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.image_source*, align 8
  %4 = alloca %struct.dstr, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %7 = load i8*, i8** %2, align 8
  %8 = bitcast i8* %7 to %struct.image_source*
  store %struct.image_source* %8, %struct.image_source** %3, align 8
  %9 = bitcast %struct.dstr* %4 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 8 %9, i8 0, i64 16, i1 false)
  %10 = call i32* (...) @obs_properties_create()
  store i32* %10, i32** %5, align 8
  %11 = load %struct.image_source*, %struct.image_source** %3, align 8
  %12 = icmp ne %struct.image_source* %11, null
  br i1 %12, label %13, label %46

13:                                               ; preds = %1
  %14 = load %struct.image_source*, %struct.image_source** %3, align 8
  %15 = getelementptr inbounds %struct.image_source, %struct.image_source* %14, i32 0, i32 0
  %16 = load i64*, i64** %15, align 8
  %17 = icmp ne i64* %16, null
  br i1 %17, label %18, label %46

18:                                               ; preds = %13
  %19 = load %struct.image_source*, %struct.image_source** %3, align 8
  %20 = getelementptr inbounds %struct.image_source, %struct.image_source* %19, i32 0, i32 0
  %21 = load i64*, i64** %20, align 8
  %22 = load i64, i64* %21, align 8
  %23 = icmp ne i64 %22, 0
  br i1 %23, label %24, label %46

24:                                               ; preds = %18
  %25 = load %struct.image_source*, %struct.image_source** %3, align 8
  %26 = getelementptr inbounds %struct.image_source, %struct.image_source* %25, i32 0, i32 0
  %27 = load i64*, i64** %26, align 8
  %28 = call i32 @dstr_copy(%struct.dstr* %4, i64* %27)
  %29 = call i32 @dstr_replace(%struct.dstr* %4, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0))
  %30 = getelementptr inbounds %struct.dstr, %struct.dstr* %4, i32 0, i32 0
  %31 = load i8*, i8** %30, align 8
  %32 = call i8* @strrchr(i8* %31, i8 signext 47)
  store i8* %32, i8** %6, align 8
  %33 = load i8*, i8** %6, align 8
  %34 = icmp ne i8* %33, null
  br i1 %34, label %35, label %45

35:                                               ; preds = %24
  %36 = load i8*, i8** %6, align 8
  %37 = getelementptr inbounds %struct.dstr, %struct.dstr* %4, i32 0, i32 0
  %38 = load i8*, i8** %37, align 8
  %39 = ptrtoint i8* %36 to i64
  %40 = ptrtoint i8* %38 to i64
  %41 = sub i64 %39, %40
  %42 = add nsw i64 %41, 1
  %43 = trunc i64 %42 to i32
  %44 = call i32 @dstr_resize(%struct.dstr* %4, i32 %43)
  br label %45

45:                                               ; preds = %35, %24
  br label %46

46:                                               ; preds = %45, %18, %13, %1
  %47 = load i32*, i32** %5, align 8
  %48 = call i32 @obs_module_text(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.3, i64 0, i64 0))
  %49 = load i32, i32* @OBS_PATH_FILE, align 4
  %50 = load i32, i32* @image_filter, align 4
  %51 = getelementptr inbounds %struct.dstr, %struct.dstr* %4, i32 0, i32 0
  %52 = load i8*, i8** %51, align 8
  %53 = call i32 @obs_properties_add_path(i32* %47, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.2, i64 0, i64 0), i32 %48, i32 %49, i32 %50, i8* %52)
  %54 = load i32*, i32** %5, align 8
  %55 = call i32 @obs_module_text(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.5, i64 0, i64 0))
  %56 = call i32 @obs_properties_add_bool(i32* %54, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.4, i64 0, i64 0), i32 %55)
  %57 = call i32 @dstr_free(%struct.dstr* %4)
  %58 = load i32*, i32** %5, align 8
  ret i32* %58
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i32* @obs_properties_create(...) #2

declare dso_local i32 @dstr_copy(%struct.dstr*, i64*) #2

declare dso_local i32 @dstr_replace(%struct.dstr*, i8*, i8*) #2

declare dso_local i8* @strrchr(i8*, i8 signext) #2

declare dso_local i32 @dstr_resize(%struct.dstr*, i32) #2

declare dso_local i32 @obs_properties_add_path(i32*, i8*, i32, i32, i32, i8*) #2

declare dso_local i32 @obs_module_text(i8*) #2

declare dso_local i32 @obs_properties_add_bool(i32*, i8*, i32) #2

declare dso_local i32 @dstr_free(%struct.dstr*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
